--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
-before_script:
-  - npm install -g rollup
-  - npm install
 cache:
   directories:
     - "node_modules"
+install:
+    - npm install -g rollup
+    - npm install
 script: npm run build
