--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "bstore",
-  "version": "1.0.2",
-  "description": "Simple localStorage with memory fallback use es6",
+  "version": "1.0.4",
+  "description": "A simple localStorage with memory fallback in browser.",
   "main": "dist/storage.js",
   "scripts": {
     "prettier-watch": "npx onchange 'src/*.js' -- prettier --write {{changed}}",
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "mocha --compilers js:babel-register"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gnipbao/localstorage-fallback.git"
+    "url": "git+https://github.com/gnipbao/bstore.git"
   },
   "keywords": [
     "localstorage",
@@ -26,9 +26,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "mocha": "^5.0.4",
+    "jasmine": "^3.1.0",
     "prettier": "^1.11.1",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
